# document_intelligence_refinery

./: .gitignore  Dockerfile  README.md  extraction_rules.yaml  main.py  pyproject.toml  run_docling_layout.py  run_extraction.py  run_fast_text.py  run_vision_extractor.py
.refinery/: extraction_ledger.jsonl  facts.db
.refinery/chroma_db/: chroma.sqlite3
.refinery/profiles/: 2013-E.C-Audit-finding-information.pdf.json  2013-E.C-Procurement-information.pdf.json  Annual_Report_JUNE-2019.pdf.json  Consumer Price Index July 2025.pdf.json  RepoInvestigator_Architecture_Report.pdf.json  dummy.pdf.json
frontend/: app.js  index.html  style.css
scripts/: process_12_docs.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/api/: server.py
src/models/: document_profile.py  extracted_document.py  layout_extractor.py  ldu.py  page_index.py  provenance.py  provenance_chain.py
src/services/: content_hashing.py  extraction_ledger.py  fact_table_extractor.py  page_index_builder.py  vector_store.py
src/services/triage_services/: artifact_loader.py  cost_estimator.py  domain_classifier.py  language_detector.py  layout_detector.py  origin_detector.py
src/strategies/: __init__.py  fast_text.py  layout_extractor.py  vision_config.py  vision_extractor.py
tests/: test_api.py  test_query_agent.py  test_triage_agent.py
