[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doclayout-yolo>=0.0.4",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "docling>=2.0.0",
    "fast-langdetect>=1.0.0",
    "huggingface-hub>=0.23,<1",
    "numpy>=2.4.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "langgraph>=1.0.10",
    "langchain-core>=0.3",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "faiss-cpu>=1.13.2",
    "chromadb>=1.5.2",
    "langchain-huggingface>=1.2.1",
    "python-dotenv>=1.2.2",
]
